<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/third_to_first_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to First" />
</LinearLayout>