<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/first_to_second_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to SecondActivity" />

    <Button
        android:id="@+id/first_to_repeat_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to RepeatActivity" />

    <Button
        android:id="@+id/first_to_tabview_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to TabviewActivity" />

    <Button
        android:id="@+id/fragment_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="to FragmentActivity" />
</LinearLayout>